--- a/src/components/Topbar/topbar.scss
+++ b/src/components/Topbar/topbar.scss
@@ -7,25 +7,54 @@
     justify-content: space-between;
     align-items: center;
     .appbar-logo {
+        margin-left: 6rem;
         .appbar-logo-img {
             max-width: 20vw;
             height: auto;
             padding: 1rem;
+            cursor: pointer;
         }
     }
     .appbar-links {
+        margin-right: 6rem;
         display: flex;
         align-items: center;
         justify-content: space-between;
+
         .appbar-links-item {
+            display: flex;
+            align-items: center;
+            justify-content: center;
             text-align: center;
             font-family: Inter;
             font-weight: bold;
-            font-size: 25px;
+            font-size: 22px;
             color: #222222;
-
-            padding-top: 0.85rem;
             margin-right: 1rem;
+            margin-top: 0.3rem;
+            cursor: pointer;
+        }
+        .appbar-links-item-special {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+            font-family: Inter;
+            font-weight: bold;
+            font-size: 22px;
+            color: #222222;
+            margin-right: 1rem;
+            margin-top: 0.3rem;
+            cursor: pointer;
+            margin-left: 1rem;
+            padding: 0.5rem 1rem;
+            border-radius: 9px;
+            border: 3px solid #000;
+
+            &:hover {
+                color: #fff;
+                background-color: #222222;
+            }
         }
     }
 }
