--- a/src/components/Card/card.scss
+++ b/src/components/Card/card.scss
@@ -41,7 +41,7 @@
             align-items: center;
             justify-content: center;
             .card-container-segment-body-row {
-                width: 70%;
+                width: 75%;
                 padding: 1rem 3rem;
                 display: flex;
                 flex-direction: row;
@@ -55,8 +55,18 @@
                     height: 10px;
                     width: auto;
                 }
-                @media screen and (min-width: 451px) and (max-width: 750px) {
-                    width: 85%;
+                .card-container-segment-body-row-unit {
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    .card-container-segment-body-row-icon {
+                        height: 25px;
+                        width: auto;
+                    }
+                }
+
+                @media screen and (max-width: 750px) {
+                    width: 100%;
                     padding: 0.5rem 1.5rem;
                     font-size: 15px;
                     display: flex;
@@ -67,18 +77,17 @@
                     font-weight: bold;
                     color: #222222;
                 }
-                @media screen and (max-width: 450px) {
-                    width: 100%;
-                    padding: 0.5rem 0.5rem;
-                    font-size: 10px;
-                    display: flex;
-                    flex-direction: row;
-                    justify-content: space-between;
-                    align-items: center;
-                    font-family: Inter;
-                    font-weight: bold;
-                    color: #222222;
-                }
+                // @media screen and (max-width: 450px) {
+                //     width: 100%;
+                //     font-size: 10px;
+                //     display: flex;
+                //     flex-direction: row;
+                //     justify-content: space-between;
+                //     align-items: center;
+                //     font-family: Inter;
+                //     font-weight: bold;
+                //     color: #222222;
+                // }
             }
 
             .card-container-segment-body-row-special {
