--- a/src/components/Topbar/topbar.scss
+++ b/src/components/Topbar/topbar.scss
@@ -8,8 +8,12 @@
     align-items: center;
     .appbar-logo {
         margin-left: 6rem;
+        @media screen and (max-width: 750px) {
+            margin-left: 0.2rem;
+        }
         .appbar-logo-img {
             max-width: 20vw;
+            min-width: 18vw;
             height: auto;
             padding: 1rem;
             cursor: pointer;
@@ -28,11 +32,14 @@
             text-align: center;
             font-family: Inter;
             font-weight: bold;
-            font-size: 22px;
+            font-size: 1.3rem;
             color: #222222;
             margin-right: 1rem;
             margin-top: 0.3rem;
             cursor: pointer;
+            &:hover {
+                text-decoration: underline black;
+            }
         }
         .appbar-links-item-special {
             display: flex;
@@ -41,7 +48,7 @@
             text-align: center;
             font-family: Inter;
             font-weight: bold;
-            font-size: 22px;
+            font-size: 1.6rem;
             color: #222222;
             margin-right: 1rem;
             margin-top: 0.3rem;
@@ -54,6 +61,7 @@
             &:hover {
                 color: #fff;
                 background-color: #222222;
+                text-decoration: underline white;
             }
         }
     }
